<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/pit_teamNumber_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_of_screen_margin"
                    android:hint="@string/pitTeamNumber"
                    android:inputType="number"
                    android:maxLength="5"/>

                <TextView
                    android:id="@+id/pitAutonOperationText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:text="@string/pitAutonOperation"
                    android:textSize="@dimen/label_text_size"/>

                <RadioGroup
                    android:id="@+id/autonOperationsRadioQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/visionSystemAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/visionSystemAuton"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/cameraDrivingAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cameraDrivingAuton"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/blindDrivingAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/blindDrivingAuton"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/noDrivingAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/noDrivingAuton"
                        style="@style/scoutingRadioButtonTheme" />
                </RadioGroup>

                <TextView
                    android:id="@+id/pitAutonPreferenceText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:text="@string/pitAutonPreference"
                    android:textSize="@dimen/label_text_size"/>

                <RadioGroup
                    android:id="@+id/AutonPreferenceRadioQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rocketshipPreferenceAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/rocketshipPreferenceAuton"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/cargoshipPreferenceAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cargoshipPreferenceAuton"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/noPreferenceAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/noPreferenceAuton"
                        style="@style/scoutingRadioButtonTheme" />

                </RadioGroup>

                <TextView
                    android:id="@+id/pitRocketLevelAutonText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:text="@string/pitRocketLevelAuton"
                    android:textSize="@dimen/label_text_size"/>

                <RadioGroup
                    android:id="@+id/highestRocketLevelAutonRadioQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/topRocketLevelAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/topRocketLevelAuton"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/middleRocketLevelAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/middleRocketLevelAuton"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/bottomRocketLevelAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/bottomRocketLevelAuton"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/noRocketLevelAuton_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/noRocketLevelAuton"
                        style="@style/scoutingRadioButtonTheme" />
                </RadioGroup>

                <TextView
                    android:id="@+id/pitHabitatLevelText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:text="@string/pitHabitatLevel"
                    android:textSize="@dimen/label_text_size"/>

                <RadioGroup
                    android:id="@+id/highestHabitatLevelRadioQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/topHabitatLevel_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/topHabitatLevel"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/middleHabitatLevel_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/middleHabitatLevel"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/bottomHabitatLevel_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/bottomHabitatLevel"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/noHabitatLevel_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/noHabitatLevel"
                        style="@style/scoutingRadioButtonTheme" />
                </RadioGroup>

                <EditText
                    android:id="@+id/pit_habitatTime_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:hint="@string/pitHabitatLevelTime"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/pitProgrammingLanguageText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:text="@string/pitprogrammingLanguage"
                    android:textSize="@dimen/label_text_size"/>

                <RadioGroup
                    android:id="@+id/programmingLanguageRadioQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/javaProgrammingLanguage_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/javaProgrammingLanguage"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/cppProgrammingLanguage_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cppProgrammingLanguage"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/labviewProgrammingLanguage_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/labviewProgrammingLanguage"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/otherProgrammingLanguage_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/otherProgrammingLanguage"
                        style="@style/scoutingRadioButtonTheme" />
                </RadioGroup>

                <EditText
                    android:id="@+id/pit_bonusQuestion_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:hint="@string/pitBonusQuestion"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/pit_comments_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:hint="@string/pit_comments_Text"
                    android:inputType="text"/>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/take_photo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openCamera"
            android:text="@string/takePhotoButton" />

        <Button
            android:id="@+id/save_pit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="savePitData"
            android:text="@string/savePitButton" />

    </LinearLayout>

</FrameLayout>