<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">


                <TextView
                    android:id="@+id/endGameRobotSpeedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_of_screen_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:text="@string/endGameRobotSpeedHeading"
                    android:textSize="@dimen/label_text_size"/>

                <RadioGroup
                    android:id="@+id/endGameRobotSpeedRadioQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/slowRobotEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/slowRobotSpeedEndGame"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/mediumRobotSpeedEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/mediumRobotSpeedEndGame"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/fastRobotSpeedEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/fastRobotSpeedEndGame"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/deadRobotSpeedEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/deadRobotSpeedEndGame"
                        style="@style/scoutingRadioButtonTheme" />
                </RadioGroup>
                <TextView
                    android:id="@+id/endGameRobotPlacementText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_of_screen_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:text="@string/endGameRobotPlacementHeading"
                    android:textSize="@dimen/label_text_size"/>
                <RadioGroup
                    android:id="@+id/endGameRobotPlacementRadioQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/parkedRobotEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/parkedRobotEndGame"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/AttemptedOnStageEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/attemptedOnstageEndGame"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/successOnstageEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/successOnstageEndGame"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/harmonizedEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/harmonizedEndGame"
                        style="@style/scoutingRadioButtonTheme" />
                    <RadioButton
                        android:id="@+id/noEndGame_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/noEndGame"
                        style="@style/scoutingRadioButtonTheme" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/endGameSpotlight_chkbx"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/endGameSpotlight_chkbxText"
                    style="@style/scoutingRadioButtonTheme" />
                <CheckBox
                    android:id="@+id/endGameCoopertitionBonus_chkbx"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/endGameCooperationBonus_chkbxText"
                    style="@style/scoutingRadioButtonTheme" />

                <CheckBox
                    android:id="@+id/endGameDefenseAllMatch_chkbx"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/endGameDefenseAllMatch_chkbxText"
                    style="@style/scoutingRadioButtonTheme" />


                <TextView
                    android:id="@+id/endGameDefenseText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:text="@string/endGameDefenseHeading"
                    android:textSize="@dimen/label_text_size"/>

                <RadioGroup
                    android:id="@+id/endGameDefenseRadioQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/endGameDefenseEffective_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/endGameDefenseEffective"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/endGameDefenseIneffective_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/endGameDefenseIneffective"
                        style="@style/scoutingRadioButtonTheme" />

                    <RadioButton
                        android:id="@+id/endGameDefenseNone_Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/endGameDefenseNone"
                        style="@style/scoutingRadioButtonTheme" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/endGameFouls_chkbx"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_height"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="@dimen/textview_spacer"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/endGameFoulsChkbxText"
                    style="@style/scoutingRadioButtonTheme" />

                <EditText
                    android:id="@+id/matchComments_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/top_margin"
                    android:hint="@string/matchComments"
                    android:inputType="text"/>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveData"
            android:text="@string/saveButton" />

    </LinearLayout>

</FrameLayout>